[gd_scene load_steps=5 format=3 uid="uid://d0p6vdi5tjnfe"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_qyx01"]
[ext_resource type="Script" path="res://scenes/online_battle/lobby/room/chat_box/chat_box.gd" id="2_gfqa0"]

[sub_resource type="InputEventAction" id="InputEventAction_ivjn5"]
action = &"ui_send_message"

[sub_resource type="Shortcut" id="Shortcut_uogg4"]
events = [SubResource("InputEventAction_ivjn5")]

[node name="ChatBox" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qyx01")
script = ExtResource("2_gfqa0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ChatLog" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InputLine" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
shortcut = SubResource("Shortcut_uogg4")
text = "@SEND"
